--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+.box{
+  display: flex;
+}
+.card{
+  border: 1px dotted #ccc;
+  margin: 10px;
+  min-height: 325px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card .card-image .card-title{
+  font-weight: 600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.addButton {
+  background-color: #fff;
+  border: 1px solid grey;
+  border-radius: 20px;
+  padding: 0 12px;
+  font-size: 16px;
+  font-weight: 600;
+  outline: 0 !important;
+  width: 90px;
+  color: orange;
+  text-align: center;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.shopping-cart {
+  width: 100%;
+  max-width: 1000px;
+  margin: 1em auto;
+  padding: 1em;
+}
+
+.table-row-head{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 3em 0;
+  padding: 0;
+  box-shadow: 0 0 40px rgba(0,0,0,0.2);
+}
+
+
+.shopping-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.shopping-column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
